# AuditML

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: cifar100_baseline.yaml  cifar10_baseline.yaml  default.yaml  mnist_baseline.yaml
scripts/: train_baseline.py  verify_env.py
src/auditml/: __init__.py  cli.py
src/auditml/attacks/: __init__.py  attribute_inference.py  base.py  mia_shadow.py  mia_threshold.py  model_inversion.py  results.py  visualization.py
src/auditml/config/: __init__.py  loader.py  schema.py
src/auditml/data/: __init__.py  datasets.py  transforms.py
src/auditml/models/: __init__.py  base.py  cnn.py  resnet.py
src/auditml/reporting/: __init__.py  attack_comparison.py  attack_visualization.py  comparison.py  visualization.py
src/auditml/training/: __init__.py  dp_trainer.py  trainer.py
src/auditml/utils/: __init__.py  device.py  experiment.py  logging.py  reproducibility.py
tests/: conftest.py  test_attack_comparison.py  test_attacks_base.py  test_attribute_inference.py  test_attribute_inference_eval.py  test_cli.py  test_config.py  test_data.py  test_dp_comparison.py  test_dp_training.py  test_mia_shadow.py  test_mia_shadow_eval.py  test_mia_threshold.py  test_mia_threshold_eval.py  test_model_inversion.py  test_model_inversion_eval.py  test_models.py  test_training.py
